--- a/public/profile.html
+++ b/public/profile.html
@@ -16,10 +16,30 @@
 				<p><span>ID: </span><span id="profile-id" class="profile-value"></span></p>
 				<p><span>Username: </span><span id="profile-username" class="profile-value"></span></p>
 				<p><span>Display Name: </span><span id="display-name" class="profile-value"></span></p>
-				<p><span>Repositories: </span><span id="profile-repos" class="profile-value"></span></p>
 				<a class="menu" href="/">Home</a>
 				<p id="menu-divide">|</p>
 				<a class="menu" href="/logout">Logout</a>
+			</div>
+			<div class="details">
+				<form class="form-horizontal">
+  					<div class="form-group">
+    					<label class="control-label col-sm-2" for="city">City:</label>
+    					<div class="col-sm-10">
+      						<input type="text" class="form-control" id="city" placeholder="Enter your city">
+    					</div>
+  					</div>
+  					<div class="form-group">
+    					<label class="control-label col-sm-2" for="state">State:</label>
+    					<div class="col-sm-10"> 
+      						<input type="text" class="form-control" id="state" placeholder="Enter your state">
+    					</div>
+  					</div>
+  					<div class="form-group"> 
+    					<div class="col-sm-offset-2 col-sm-10">
+      						<button type="submit" class="btn btn-success">Save</button>
+    					</div>
+  					</div>
+				</form>
 			</div>
 		</div>
 		
