--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,35 @@
 	</head>
 
 	<header>
-		<p>Welcome, <span id="display-name"></span>!</p>
-		<a class="menu" href="/profile">Profile</a>
-		<p>|</p>
-		<a class="menu" href="/logout">Logout</a>
+		<div class="user-info">
+			<p>Welcome, <span id="display-name"></span>!</p>
+			<a class="menu" href="/profile">Profile</a>
+			<p>|</p>
+			<a class="menu" href="/logout">Logout</a>
+		</div>
 	</header>
 
 	<body>
-		<div class="container">
-			<br />
-			<p class="clementine-text"></p>
+		<div class="container-fluid">
+			<div class="container">
+				<br />
+				<p class="clementine-text">TradeMyBooks</p>
+			</div>
+			<div class="about">
+				<br />
+				<pre class="text-center text-primary"><h5>TradeMyBooks is a book trading club where you can view books posted by users and request a trade, it's that simple!</h5></pre>
+			</div>
+			<div class="row book-buttons">
+				<div class="col-sm-12">
+					<button class="btn btn-default" id="all"><h3>All Books</h3></button>
+				</div>
+			</div>
+			<div class="row book-buttons">
+				<div class="col-sm-12">
+					<button class="btn btn-default" id="my"><h3>My Books and requests</h3></button>
+				</div>
+			</div>
 		</div>
-	
 		<script type="text/javascript" src="common/ajax-functions.js"></script>
 		<script type="text/javascript" src="controllers/userController.client.js"></script>
 	</body>
