--- a/public/myBooks.html
+++ b/public/myBooks.html
@@ -40,7 +40,22 @@
 	        <div class="text-center text-primary">
 	            <h1>
 	                My Books
-	            </h1><hr />
+	            </h1>
+	        </div>
+	        <div class="add-book-form text-center">
+	            <form class="form-inline">
+  					<div class="form-group">
+    					<label class="control-label col-sm-2" for="add-book"><strong>Add Book:</strong></label>
+    					<div class="col-sm-10"> 
+      						<input type="text" class="form-control" id="add-book" placeholder="Enter book title">
+    					</div>
+  					</div>
+  					<div class="form-group"> 
+    					<div class="col-sm-offset-2 col-sm-10">
+      						<button type="submit" class="btn btn-success">Add</button>
+    					</div>
+  					</div>
+				</form>
 	        </div>
 	        <div class="book-list">
 	        </div>
