--- a/public/allBooks.html
+++ b/public/allBooks.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<header>
-		<button class="btn-link"><i class="fa fa-home" style="font-size:48px"></i>Home</button>
+		<button class="btn-link home"><i class="fa fa-home" style="font-size:48px"></i>Home</button>
 		<div class="user-info">
 			<p>Welcome, <span id="display-name"></span>!</p>
 			<a class="menu" href="/profile">Profile</a>
