--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<header>
-		<button class="btn-link"><i class="fa fa-home" style="font-size:48px"></i>Home</button>
+		<button class="btn-link home"><i class="fa fa-home" style="font-size:48px"></i>Home</button>
 		<div class="user-info">
 			<p>Welcome, <span id="display-name"></span>!</p>
 			<a class="menu" href="/profile">Profile</a>
@@ -42,6 +42,7 @@
 		</div>
 		<script type="text/javascript" src="common/ajax-functions.js"></script>
 		<script type="text/javascript" src="controllers/userController.client.js"></script>
+		<script type="text/javascript" src="controllers/clickController.index.js"></script>
 	</body>
 
 </html>
