--- a/public/allBooks.html
+++ b/public/allBooks.html
@@ -36,6 +36,7 @@
 	    
 	    <script type="text/javascript" src="common/ajax-functions.js"></script>
 		<script type="text/javascript" src="controllers/userController.client.js"></script>
+		<script type="text/javascript" src="controllers/onLoadController.allBooks.js"></script>
 	</body>
 	
 </html>
