--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,5 @@
 		<script type="text/javascript" src="controllers/userController.client.js"></script>
 		<script type="text/javascript" src="controllers/clickController.index.js"></script>
 	</body>
-
+	<footer class="text-center"><a href="https://github.com/Siddhant24" target="_blank">&copy; Siddhant Bhakar</a></footer>
 </html>
