--- a/public/allBooks.html
+++ b/public/allBooks.html
@@ -38,5 +38,5 @@
 		<script type="text/javascript" src="controllers/userController.client.js"></script>
 		<script type="text/javascript" src="controllers/onLoadController.allBooks.js"></script>
 	</body>
-	
+	<footer class="text-center"><a href="https://github.com/Siddhant24" target="_blank">&copy; Siddhant Bhakar</a></footer>
 </html>
