site info added

--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,11 @@
 	<body>
 		<div class="container">	
 			<div class="login">
-				<p class="clementine-text"></p>
+				<p class="clementine-text">TradeMyBooks</p><br />
+				<div class="about">
+				<br />
+				<pre class="text-center text-primary"><h6>TradeMyBooks is a book trading club where you can view books posted by users and request a trade, it's that simple!</h6></pre>
+				</div><br /><br />
 				<a href="/auth/github">
 					<div class="btn" id="login-btn">
 						<img src="/public/img/github_32px.png" alt="github logo" />
@@ -22,5 +26,5 @@
 			</div>
 		</div>
 	</body>
-
+	<footer class="text-center"><a href="https://github.com/Siddhant24" target="_blank">&copy; Siddhant Bhakar</a></footer>
 </html>
