added buttons to view request info

--- a/public/myBooks.html
+++ b/public/myBooks.html
@@ -36,12 +36,12 @@
 	                <button class="btn btn-primary" id="traded"><h4>Traded books</h4></button>
 	            </div>
 	        </div><br /><br />
-	        <div class="request-text"></div>
+	        <div class="request-text"></div><hr />
 	        <div class="text-center text-primary">
 	            <h1>
 	                My Books
 	            </h1>
-	        </div>
+	        </div><br />
 	        <div class="add-book-form text-center">
 	            <form class="form-inline" method="post">
   					<div class="form-group">
@@ -56,7 +56,7 @@
     					</div>
   					</div>
 				</form>
-	        </div>
+	        </div><br /><br />
 	        <div class="book-list">
 	        </div>
 	    </div>
@@ -65,5 +65,5 @@
 		<script type="text/javascript" src="controllers/userController.client.js"></script>
 		<script type="text/javascript" src="controllers/onLoadController.myBooks.js"></script>
 	</body>
-	
+	<footer class="text-center"><a href="https://github.com/Siddhant24" target="_blank">&copy; Siddhant Bhakar</a></footer>
 </html>
